# muni

./: .gitignore  PROMPT.md  README.md  console.py  llm.py  pyproject.toml  run.sh  tools.py
src/muni/: PROMPT.md  __init__.py  agent.py  cli.py
src/muni/tools/: __init__.py  edit_file.py  fetch_url.py  list_dir.py  read_file.py  run_command.py
tools/: __init__.py  list_dir.py  read_file.py
