[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muni"
version = "0.1.0"
description = "A minimal LLM-powered coding agent with tool use"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
muni = "muni.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
muni = ["PROMPT.md"]
